--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         <h1>Hi Everyone!!!</h1>
         <script src="js/index.js"></script>
+        <input type="search" onkeyup="callDebounce()">
     </body>
 </html>
