--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <html lang="en">
     <head>
         <title>Sowjanya</title>
-        <style>
+        <!-- <style>
             div {
               min-width: 100px;
               min-height: 100px;
               padding: 30px;
               border: 1px solid black;
             }
-        </style>
+        </style> -->
     </head>
     <body>
         <h1>Hi Everyone!!!</h1>
-             <div id="grand">
+             <!-- <div id="grand">
               <div id="parent">
                  <div id="child"></div>
               </div>
-         </div>
+         </div> -->
         <script src="js/index.js"></script>
         <!-- <input type="search" onkeyup="callDebounce()"> -->
     
