--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
                  <div id="child"></div>
               </div>
          </div> -->
+
+         <div>
+            <ul id="categories">
+                <li id="laptops">Laptops</li>
+                 <li id="cameras">Cameras</li>
+                  <li id="shoes">Shoes</li>
+            </ul>
+         </div>
+
+         <div id="form">
+            <input id="name" type="text" data-uppercase/>
+            <input id="pan" type="text"/>
+            <input id="address" type="text"/>
+         </div>
         <script src="js/index.js"></script>
         <!-- <input type="search" onkeyup="callDebounce()"> -->
     
