--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               </div>
          </div> -->
 
-         <div>
+         <!-- <div>
             <ul id="categories">
                 <li id="laptops">Laptops</li>
                  <li id="cameras">Cameras</li>
@@ -31,8 +31,10 @@
             <input id="name" type="text" data-uppercase/>
             <input id="pan" type="text"/>
             <input id="address" type="text"/>
-         </div>
+         </div> -->
+
         <script src="js/index.js"></script>
+        
         <!-- <input type="search" onkeyup="callDebounce()"> -->
     
     </body>
