--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
             <input id="pan" type="text"/>
             <input id="address" type="text"/>
          </div> -->
+         <button onClick="betterExpensive()">Button</button>
 
         <script src="js/index.js"></script>
-        
+
         <!-- <input type="search" onkeyup="callDebounce()"> -->
     
     </body>
