--- a/comment_section/index.html
+++ b/comment_section/index.html
@@ -4,7 +4,7 @@
  <head>
     <meta charset="UTF-8">
     <title>Comment Section</title>
-    <link rel="stylesheet" href="comment_section/style.css">
+    <link rel="stylesheet" href="style.css">
  </head>
 
  <body>
@@ -26,7 +26,7 @@
 
    </div>
 
-    <script src="comment_section/app.js"></script>
+    <script src="app.js"></script>
  </body>
 
 </html>
