local and sesion storag

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <input id="pan" type="text"/>
             <input id="address" type="text"/>
          </div> -->
-         <button onClick="betterExpensive()">Button</button>
+        <h1>LocalStorage</h1>
 
         <script src="js/index.js"></script>
 
