--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <input id="address" type="text"/>
          </div> -->
         <h1>LocalStorage</h1>
+        <button onclick="alert(this)">Click me</button>
 
         <script src="js/index.js"></script>
 
